# tensor-contract-bench

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cases/matmul/: square.yaml
cases/rank3/: one_bond.yaml
cases/rank4/: two_bond.yaml
cpp/: CMakeLists.txt
cpp/include/tcb/: benchmark_case.hpp  blas_matmul.hpp  case_loader.hpp  dense_tensor.hpp  dtype.hpp  layout.hpp  reference_matmul.hpp  result.hpp  result_writer.hpp  tblis_matmul.hpp  tensor_view.hpp  types.hpp
cpp/src/: blas_matmul.cpp  case_loader.cpp  reference_matmul.cpp  result_writer.cpp  tblis_matmul.cpp  tcb_run.cpp
docs/: spec.md
schemas/: case.schema.json  result.schema.json
tests/: test_validate_schemas.py
tests/cpp/: CMakeLists.txt  blas_matmul_test.cpp  case_loader_test.cpp  core_types_test.cpp  reference_matmul_test.cpp  result_writer_test.cpp  tblis_matmul_test.cpp  tcb_run_blas_test.cpp  tcb_run_tblis_test.cpp  tcb_run_test.cpp
tools/: validate_schemas.py
